# pilot-hdc-notification

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Jenkinsfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: hdc-pipeline.yml
migrations/: env.py
migrations/versions/: 0006_add_project_code_column_to_notifications_table.py  0007_update_type_column_enum_in_notifications_table.py  0008_alter_all_schemas_to_public.py  0009_rename_notifications_indexes.py  0010_add_tables_related_to_announcements.py  0011_delete_maintenance_notifications.py  0012_drop_legacy_maintenance_related_tables.py  0013_drop_legacy_announcement_table.py  0014_add_notifications_table.py  0015_add_announcements_related_tables.py  49fbb2de7523_add_announcements_table.py  64a329367547_add_notifications_table.py  acfc65939c91_add_unsubscribed_notification_table.py  e6fcf3ec5303_add_created_date_to_system_maintenance.py  f7b7903f78c4_add_system_maintenance_table.py
notification/: __init__.py  __main__.py  app.py  config.py  logger.py
notification/components/: __init__.py  crud.py  db_model.py  exceptions.py  filtering.py  models.py  pagination.py  parameters.py  schemas.py  sorting.py  types.py
notification/components/announcement/: __init__.py  crud.py  dependencies.py  filtering.py  models.py  views.py  (+2 more)
notification/dependencies/: __init__.py  db.py
tests/: conftest.py
tests/components/: test_models.py  test_pagination.py  test_parameters.py  test_schemas.py  test_sorting.py  test_types.py
tests/fixtures/: app.py  db.py  fake.py  jq.py
(+52 files in other folders)
