[tool.poetry]
name = "notification"
version = "2.0.1"
description = "Service for managing emails, user notifications and platform announcements."
authors = ["Indoc Systems"]

[tool.poetry.dependencies]
python = "^3.10"
pilot-platform-common = "^0.1.0"
fastapi = "0.85.0"
Jinja2 = "2.11.2"
opentelemetry-exporter-jaeger = "1.6.2"
opentelemetry-instrumentation = "0.26b1"
opentelemetry-instrumentation-fastapi = "0.26b1"
opentelemetry-instrumentation-requests = "0.26b1"
psycopg2 = "2.9.3"
PyJWT = "1.4.2"
python-dotenv = "0.19.1"
python-json-logger = "2.0.2"
python-multipart = "0.0.5"
requests = "2.31.0"
uvicorn = { extras = ["standard"], version = "0.17.6" }
itsdangerous = "1.1.0"
markupsafe = "1.1.1"
asyncpg = "^0.25.0"
aiosmtpd = "^1.4.2"
greenlet = "1.1.3"
pydantic = "1.10.2"
sqlalchemy = "1.4.45"
email-validator = "1.3.0"

[tool.poetry.dev-dependencies]
httpx = "0.23.0"
pytest = "7.1.2"
pytest-asyncio = "0.18.3"
pytest-cov = "^3.0.0"
pytest-dependency = "0.5.1"
pytest-env = "0.6.2"
pytest-mock = "^3.7.0"
PyYAML = "6.0.0"
testcontainers = "3.5.4"
alembic = "^1.7.7"
Faker = "14.2.1"
jq = "1.3.0"

[tool.pytest.ini_options]
testpaths = "tests"
asyncio_mode = "auto"

[tool.coverage.run]
concurrency = ["thread", "greenlet"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
